--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for mcp-server-zfmlcw on 2026-01-09T06:49:26Z
+# fly.toml app configuration file generated for mcp-server-zfmlcw on 2026-01-10T02:38:14Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'mcp-server-zfmlcw'
-primary_region = 'nrt'
+primary_region = 'iad'
 
 [build]
 
@@ -20,4 +20,4 @@ primary_region = 'nrt'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 256
+  memory_mb = 1024
